# Orvena

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
crates/orvena-cli/: Cargo.toml
crates/orvena-cli/src/: cli.rs  main.rs
crates/orvena-cli/src/commands/: doctor.rs  init.rs  mod.rs  run.rs  status.rs
crates/orvena-cli/src/scaffold/: context-budgets.yaml  gates.yaml  orvena.yaml  roles.yaml
crates/orvena-cli/src/scaffold/skills/summarize-changes/: SKILL.md
crates/orvena-core/: Cargo.toml
crates/orvena-core/src/: error.rs  lib.rs  util.rs
crates/orvena-core/src/agent/: context.rs  driver.rs  mod.rs  step.rs
crates/orvena-core/src/config/: agent.rs  context_budget.rs  gates.rs  mod.rs  roles.rs
crates/orvena-core/src/governance/: gate.rs  mod.rs  scope.rs
crates/orvena-core/src/metrics/: baseline.rs  mod.rs
crates/orvena-core/src/provider/: anthropic.rs  mod.rs  offline.rs  ollama.rs  openai_compat.rs  registry.rs
crates/orvena-core/src/skills/: applicator.rs  mod.rs  registry.rs  resolver.rs
crates/orvena-core/src/tools/: fs.rs  mod.rs
crates/orvena-core/tests/: loop_offline.rs
scripts/: boundary-check.sh
